--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
 # dependencies
-node_modules
 /node_modules
+node_modules/
 /.pnp
 .pnp.js
+
+# Backend & Frontend node_modules
+/frontend/node_modules/
+
 
 # testing
 /coverage
@@ -23,3 +28,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode/
+uploads/
