--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "gadgetgrove",
-  "description": "",
   "version": "1.0.0",
+  "description": "MERN shopping cart app",
   "main": "server.js",
   "type": "module",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
+  },
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
@@ -12,24 +23,10 @@
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rishavB7/GadgetGrove.git"
-  },
   "author": "Rishav Barman",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rishavB7/GadgetGrove/issues"
-  },
-  "homepage": "https://github.com/rishavB7/GadgetGrove#readme",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.3"
-  },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.3"
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1"
   }
 }
